name:                bindings-linear
version:             0.1.0
synopsis:            Low level bindings to liblinear.
description:
  Low level bindings to liblinear <http://www.csie.ntu.edu.tw/~cjlin/liblinear/>.
  .
license:             BSD3
license-file:        LICENSE
author:              Paulo Tanimoto <ptanimoto@gmail.com>
maintainer:          Paulo Tanimoto <ptanimoto@gmail.com>
homepage:            http://github.com/NathanHowell/bindings-linear
bug-reports:         http://github.com/NathanHowell/bindings-linear/issues
category:            FFI

build-type:          Simple
cabal-version:       >= 1.2.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Bindings.Linear
  build-depends:
    base         >= 3   && < 5,
    bindings-DSL >= 1.0 && < 1.1
  ghc-options:
    -Wall
  extensions:
    ForeignFunctionInterface
  includes:
    linear.h
  extra-libraries:
    linear
--  pkgconfig-depends:
--    liblinear >= 1.8
