name:                liblinear-enumerator
version:             0.1.0
synopsis:            liblinear iteratee.
description:
  High level bindings to liblinear <http://www.csie.ntu.edu.tw/~cjlin/liblinear/>.
  .
license:             BSD3
license-file:        LICENSE
author:              Nathan Howell <nathan.d.howell@gmail.com>
maintainer:          Nathan Howell <nathan.d.howell@gmail.com>
homepage:            http://github.com/NathanHowell/liblinear-enumerator
bug-reports:         http://github.com/NathanHowell/liblinear-enumerator/issues
category:            FFI

build-type:          Simple
cabal-version:       >= 1.2.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Data.LibLinear
  build-depends:
    base         >= 3      && < 5,
    bindings-DSL >= 1.0    && < 1.1,
    enumerator   >= 0.4.10 && < 0.5,
    mtl          >= 2      && < 3,
    array        >= 0.3    && < 0.4
  ghc-options:
    -Wall
  extensions:
    ForeignFunctionInterface
  includes:
    linear.h
  extra-libraries:
    linear
